"""
models.py

This file contains the data models for EC2Instance and EC2InstanceConfig.
"""

class EC2Instance:
    def __init__(self, id: str, instance_type: str, storage_options: dict, networking_settings: dict, status: str):
        self.id = id
        self.instance_type = instance_type
        self.storage_options = storage_options
        self.networking_settings = networking_settings
        self.status = status

    def create_instance(self):
        """
        Create the EC2 instance using the specified configuration options.
        """
        # Implementation details

    def get_status(self) -> str:
        """
        Get the current status of the EC2 instance.
        """
        # Implementation details

    def update_status(self, status: str):
        """
        Update the status of the EC2 instance.
        """
        # Implementation details


class EC2InstanceConfig:
    def __init__(self, id: str, instance_type: str, storage_options: dict, networking_settings: dict):
        self.id = id
        self.instance_type = instance_type
        self.storage_options = storage_options
        self.networking_settings = networking_settings

    def save(self):
        """
        Save the instance configuration to the database.
        """
        # Implementation details

    @classmethod
    def load(cls, id: str) -> "EC2InstanceConfig":
        """
        Load the instance configuration from the database based on the specified ID.
        """
        # Implementation details
